--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,11 @@
 # For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
 image: r-base
 
+variables:
+  R_LIBS_USER: "$CI_PROJECT_DIR/ci/lib"
+  CHECK_DIR: "$CI_PROJECT_DIR/ci/logs"
+  BUILD_LOGS_DIR: "$CI_PROJECT_DIR/ci/logs/$CI_PROJECT_NAME.Rcheck"
+
 stages:          # List of stages for jobs, and their order of execution
   - build
   - test
@@ -23,8 +28,15 @@ stages:          # List of stages for jobs, and their order of execution
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
-    - R -e 'install.packages(c("dplyr", "purrr", "testthat", "devtools"))'
-    - R CMD build . --no-build-vignettes --no-manual
+      - mkdir -p $R_LIBS_USER $BUILD_LOGS_DIR
+      - R -e 'devtools::install_deps(dep = T, lib = Sys.getenv("R_LIBS_USER"))'
+      - R -e 'devtools::check(check_dir = Sys.getenv("CHECK_DIR"))'
+      - R -e 'if (length(devtools::check_failures(path = Sys.getenv("BUILD_LOGS_DIR"), note = FALSE)) > 0) stop()'
+      # - R -e 'install.packages(c("dplyr", "purrr", "testthat", "devtools"))'
+      - R CMD build . --no-build-vignettes --no-manual
+  cache:
+    paths:
+    - $R_LIBS_USER
 
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
