--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@
 # Stages run in sequential order, but jobs within stages run in parallel.
 #
 # For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
-image: r-base
+image: rocker/tidyverse
 
 variables:
   R_LIBS_USER: "$CI_PROJECT_DIR/ci/lib"
