--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,10 +29,10 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
       - mkdir -p $R_LIBS_USER $BUILD_LOGS_DIR
+      - R -e 'install.packages(c("htmlwidgets", "rjson"))'
       - R -e 'devtools::install_deps(package=Sys.getenv("CI_PROJECT_DIR"), dep = T, lib = Sys.getenv("R_LIBS_USER"))'
       - R -e 'devtools::check(check_dir = Sys.getenv("CHECK_DIR"))'
       - R -e 'if (length(devtools::check_failures(path = Sys.getenv("BUILD_LOGS_DIR"), note = FALSE)) > 0) stop()'
-      # - R -e 'install.packages(c("dplyr", "purrr", "testthat", "devtools"))'
       - R CMD build . --no-build-vignettes --no-manual
   cache:
     paths:
