--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,12 +37,16 @@ build-job:       # This job runs in the build stage, which runs first.
   cache:
     paths:
     - $R_LIBS_USER
+  artifacts:
+    paths:
+      - *.tar.gz
 
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
     - echo "Running unit tests... This will take about 60 seconds."
-    - R CMD check *tar.gz --no-build-vignettes --no-manual
+    - R CMD check *.tar.gz --no-build-vignettes --no-manual
+    - R -e 'devtools::test()'
     - echo "Code coverage is 90%"
 
 lint-test-job:   # This job also runs in the test stage.
